--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,7 +2,8 @@ project:
   type: book
   output-dir: ./docs
 
-jupyter: python3
+# jupyter: python3
+# knitr: rmarkdown
 
 book:
   title: "مبانی پایتون"
